# meta

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  __init__.py  client.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt
data/: tasks.json
server/: Dockerfile  __init__.py  app.py  security_alert_investigation_environment.py  ui.py
tests/: test_environment.py
